# cwru-ros-pkg

./: .gitignore  FindIP.py  README  README.md  connect_harlie.bash  cwru_bringup.launch  cwru_bringup_simple.launch  cwru_slam_mapping.launch  debug-rosconsole.config  harlie.rosinstall  harlie_bringup.launch  harlie_bringup_simple.launch  stack.xml  things to run for recording.txt
catkin/src/cwru_376_student/abb_pub_base/: CMakeLists.txt  README.md  notes  package.xml
catkin/src/cwru_376_student/abb_pub_base/src/: abb_pub_base.cpp
catkin/src/cwru_376_student/abby_code/abby_simu/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/abby_code/abby_simu/launch/: abby_arm.launch  abby_simu.launch
catkin/src/cwru_376_student/abby_code/abby_simu/src/: abby_simu_v1.cpp
catkin/src/cwru_376_student/wsn_examples/example_des_state_generator/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/wsn_examples/example_des_state_generator/src/: example_des_state_generator.cpp  example_des_state_generator.h  example_path_sender.cpp  example_path_sender_starting_pen.cpp
catkin/src/cwru_376_student/wsn_examples/example_interactive_marker/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/wsn_examples/example_interactive_marker/src/: IM_6dof_example2.cpp  IM_example.cpp  IM_example2.cpp  IM_example3.cpp  example_marker_user_app.cpp  example_marker_user_app_v2.cpp  marker_example.cpp  marker_listener.cpp  marker_listener_v2.cpp  path_display.cpp  path_service.cpp  simple_marker_listener.cpp
catkin/src/cwru_376_student/wsn_examples/example_irb120_IM_interface/: CMakeLists.txt  package.xml
catkin/src/cwru_376_student/wsn_examples/example_joint_space_planner/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/wsn_examples/example_joint_space_planner/include/: joint_space_planner_8dof.h
catkin/src/cwru_376_student/wsn_examples/example_joint_space_planner/src/: joint_space_planner.cpp  joint_space_planner_8dof.cpp  joint_space_planner_test_main.cpp  joint_space_planner_test_main2.cpp  test_ik_traj_sender2.cpp
catkin/src/cwru_376_student/wsn_examples/example_pcl/: CMakeLists.txt  README.md  dev_notes  package.xml
catkin/src/cwru_376_student/wsn_examples/example_pcl/src/: find_can_incomplete.cpp  pcd_save.cpp  process_pcd.cpp  (+4 more)
catkin/src/cwru_376_student/wsn_examples/example_robot_commander/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/wsn_examples/example_robot_interface/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/wsn_examples/example_steering_algorithm/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/wsn_examples/irb120_ik/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/wsn_examples/minimal_nodes/: CMakeLists.txt  README.md
catkin/src/cwru_base_hydro/cwru_base/: CMakeLists.txt  package.xml
catkin/src/cwru_base_hydro/cwru_base/launch/: start_abby_base.launch  start_abby_base_and_arm.launch  start_base.launch  start_base_simple.launch
catkin/src/cwru_base_hydro/cwru_base/msg/: NavSatFix.msg  PowerState.msg  Sonar.msg  cRIOSensors.msg
catkin/src/cwru_base_hydro/cwru_base/src/: crio_receiver.cpp  odom_translator.py  packets.py  pose_broadcaster.py  sonar_translator.py  test_accel.py  twist_receiver.py
catkin/src/cwru_base_hydro/cwru_nav/: CMakeLists.txt  full_info.vcg  package.xml  sonar_config.yaml
catkin/src/cwru_base_hydro/cwru_nav/launch/: amcl_diff.launch  sonar_filter.launch  start_amcl_2ndfloor.launch  start_outdoor_nav.launch  start_tour_guide_nav.launch
catkin/src/cwru_base_hydro/cwru_nav/src/: cwru_laser_scan_filters.cpp
catkin/src/cwru_base_hydro/cwru_teleop/: CMakeLists.txt  package.xml
catkin/src/cwru_base_hydro/cwru_teleop/launch/: start_teleop.launch
cwru_abby/abby_object_manipulator/: CMakeLists.txt  mainpage.dox  manifest.xml
cwru_abby/abby_object_manipulator/include/object_manipulator/: object_manipulator.h
cwru_abby/abby_object_manipulator/include/object_manipulator/grasp_execution/: approach_lift_grasp.h  grasp_executor.h  grasp_executor_with_approach.h  grasp_tester_fast.h  reactive_grasp_executor.h  simple_grasp_executor.h  unsafe_grasp_executor.h
cwru_abby/abby_object_manipulator/include/object_manipulator/place_execution/: descend_retreat_place.h  place_executor.h  place_tester_fast.h
cwru_abby/abby_object_manipulator/include/object_manipulator/tools/: arm_configurations.h  camera_configurations.h  configuration_loader.h  convert_functions.h  exceptions.h  grasp_marker_publisher.h  hand_description.h  ik_tester_fast.h  mechanism_interface.h  msg_helpers.h  service_action_wrappers.h  shape_tools.h  vector_tools.h
cwru_abby/abby_object_manipulator/nodes/: object_manipulator_node.cpp
cwru_abby/abby_object_manipulator/scripts/: cluster_bounding_box_finder_server.py  manipulation_controller.py
cwru_abby/abby_object_manipulator/src/: object_manipulator.cpp
cwru_abby/abby_object_manipulator/src/box_manipulator/: BoxManipulator.py
cwru_abby/abby_object_manipulator/src/grasp_execution/: approach_lift_grasp.cpp  grasp_executor.cpp  grasp_executor_with_approach.cpp  grasp_tester_fast.cpp  reactive_grasp_executor.cpp  simple_grasp_executor.cpp  unsafe_grasp_executor.cpp
cwru_abby/abby_object_manipulator/src/object_manipulator/: cluster_bounding_box_finder.py  cluster_bounding_box_finder_3d.py  convert_functions.py  draw_functions.py  geom.py  image_region_functions.py  point_cloud.py
cwru_abby/abby_object_manipulator/src/place_execution/: descend_retreat_place.cpp  place_executor.cpp  place_tester_fast.cpp
cwru_abby/abby_object_manipulator/src/tools/: convert_functions.cpp  grasp_marker_publisher.cpp  ik_tester_fast.cpp  mechanism_interface.cpp  shape_tools.cpp  vector_tools.cpp
cwru_experimental/cwru_jaus/: CMakeLists.txt  mainpage.dox  manifest.xml  start_cwru_jaus.launch
cwru_experimental/cwru_jaus/src/: jaus_case.cpp
cwru_experimental/cwru_jaus/src/settings/: services.xml
cwru_experimental/cwru_jaus/src/settings/joysticks/: default.xml  mgs.xml  rws.xml
(+1304 files in other folders)
